# visutiles

./: .gitignore  CMakeLists.txt  COPYING  README.md  TODO.md  input_spec.md
python_input/: Collatz_computer.py  Collatz_computer_east.py  Collatz_inputter.py  Collatz_test_computer_east.py  Collatz_wires.py  geometry.py
src/: Collatz.h  arguments.cpp  arguments.h  camera.cpp  camera.h  config.h  config.h.in  geometry.h  global.h  graphic_engine.cpp  graphic_engine.h  input_factory.cpp  input_factory.h  lots_of_colors_sfml.h  main.cpp  square_grid.h  tileset.cpp  tileset.h  world.cpp  world.h  world_controller.cpp  world_controller.h  world_view.cpp  world_view.h
src/assets/: example_input.json  show_Collatz_tileset.json
src/assets/tilesets/CollatzTileset/: CollatzTileset.json  CollatzTileset.tsx  CollatzTilesetLowRes.tsx
